--- a/client/css/main.css
+++ b/client/css/main.css
@@ -341,6 +341,8 @@ a::selection {
   }
   .status-bar {
     width:70%;
+    margin: .5rem;
+    height:6px;
   }
 }
 
@@ -449,7 +451,8 @@ a::selection {
     font-size:18px;
   }
   .status-bar{
-    width:100%;
+    margin: .5rem;
+    height:6px;
   }
   .percentage-bar {
     width:100%;
