--- a/client/css/main.css
+++ b/client/css/main.css
@@ -375,7 +375,10 @@ a::selection {
                   /*XSmall Screens*/
 @media only screen and (max-width:599px){
   html { overflow:hidden;}
-
+#top-container{
+  min-height: 40vh;
+  border:solid thin aqua;
+}
   #container-two {
     width: 98vw;
     min-height: 60vh;
