--- a/client/css/main.css
+++ b/client/css/main.css
@@ -376,13 +376,14 @@ a::selection {
 @media only screen and (max-width:599px){
   html { overflow:hidden;}
 #top-container{
-  min-height: 10vh;
+  min-height: 10rem;
   border:solid thin aqua;
 }
   #container-two {
     width: 98vw;
     min-height: 60vh;
     margin-bottom:1rem;
+    margin-top:8rem;
     border: solid thin red;
 
   }
