--- a/client/css/main.css
+++ b/client/css/main.css
@@ -23,11 +23,13 @@ footer {
 }
 .left-container{
   background-color: lightblue;
-
+  min-height: 2rem;
+ border: solid thin aqua;
 }
 .right-container{
   background-color: lightcoral;
-
+  min-height: 2rem;
+  border: solid thin aqua;
 }
 /*
 !***********************Global Styles*************************!
