--- a/client/css/main.css
+++ b/client/css/main.css
@@ -31,6 +31,12 @@ footer {
   min-height: 2rem;
   border: solid thin aqua;
 }
+.area-title-bar{
+  background-color: #de6fba;
+}
+.area-button-bar{
+  background-color: lightsalmon;
+}
 /*
 !***********************Global Styles*************************!
 
