--- a/client/css/main.css
+++ b/client/css/main.css
@@ -24,7 +24,7 @@ footer {
 }
 .left-container{
   background-color: lightblue;
-  min-height: 2rem;
+  min-height: 100%;
  border: solid thin aqua;
 }
 
