--- a/client/css/main.css
+++ b/client/css/main.css
@@ -24,7 +24,7 @@ footer {
 }
 .left-container{
   background-color: lightblue;
-  min-height: 100%;
+  min-height: 100vh;
  border: solid thin aqua;
 }
 
