--- a/client/css/main.css
+++ b/client/css/main.css
@@ -50,6 +50,7 @@ a::selection {
 .left-container{
   background-color: lightblue;
   height: 100vh;
+  width:100vw;
  border: solid thin aqua;
 }
 
@@ -100,6 +101,7 @@ td {
 .right-container{
   background-color: lightcoral;
   min-height: 2rem;
+  width: 30%;
   border: solid thin aqua;
 }
 #download-container{
