--- a/client/css/main.css
+++ b/client/css/main.css
@@ -50,7 +50,7 @@ a::selection {
 .left-container{
   background-color: lightblue;
   height: 100vh;
-  width:100vw;
+
  border: solid thin aqua;
 }
 
@@ -99,9 +99,8 @@ td {
 }
 
 .right-container{
-  background-color: lightcoral;
+  background-color: #f5e500;
   min-height: 2rem;
-  width: 30%;
   border: solid thin aqua;
 }
 #download-container{
@@ -203,9 +202,22 @@ textarea {
   margin-bottom: 0;
   padding: .5rem;
 }
+
+#unconfirmed-contianer {
+  overflow: auto;
+  max-height: 400px
+}
 /*********************************************************************/
 /*small screen*/
 @media only screen and (min-width:600px) and (max-width:959px){
+  .left-container{
+    min-height:6rem;
+  }
+
+  .right-container{
+    min-height:100vh;
+  }
+
   .group-title{
     font-size: 16px;
   }
