--- a/client/css/main.css
+++ b/client/css/main.css
@@ -208,9 +208,9 @@ textarea {
   padding: .5rem;
 }
 
-#unconfirmed-contianer {
-  overflow: auto;
-  max-height: 400px
+#unconfirmed-container {
+  /*overflow: auto;
+  max-height: 300px*/
 }
 /*********************************************************************/
 /*small screen*/
