--- a/client/css/main.css
+++ b/client/css/main.css
@@ -76,6 +76,7 @@ a:visited{
   background-color: white;
   min-height: 200px;
   max-height: 400px;
+  max-width:300px;
   margin-top: 1rem;
 }
 table {
@@ -104,13 +105,11 @@ td {
 
 .right-container{
 
-  min-height: 2rem;
-
 }
 #download-container{
 
   margin: .3rem 0;
- 
+
 }
 
 #download-button {
@@ -209,8 +208,9 @@ textarea {
 }
 
 #unconfirmed-container {
-  /*overflow: auto;
-  max-height: 300px*/
+  overflow: auto;
+  max-height: 300px;
+  max-width: 310px;
 }
 /*********************************************************************/
 /*small screen*/
