--- a/client/css/main.css
+++ b/client/css/main.css
@@ -110,8 +110,8 @@ td {
 }
 #download-container{
   margin: .3rem 0;
-  border-bottom: solid thin lightgrey;
-  background-color:whitesmoke;
+
+  background-color: white;
 }
 
 #download-button {
@@ -130,11 +130,10 @@ td {
 
 #confirmation-container {
   margin: .3rem 0;
-  border-bottom: solid thin lightgrey;
-  background-color:whitesmoke;
+  border: solid thin lightgray;
+  background-color:white;
 }
 #issuetracker-container{
-
   margin: .3rem 0;
 
 }
@@ -142,12 +141,11 @@ td {
 #issue-form-background {
   border: solid thin;
   border-color: rgba(52, 73, 94, 0.26);
-  background-color: whitesmoke;
+  background-color: white;
   min-height:280px;
 }
 
 #issue-tracker-form {
-
   width:300px;
 
 }
@@ -167,7 +165,7 @@ textarea {
 
 #issue-tracker-button {
   color:white;
-  width:200px;
+  width:235px;
   height:40px;
   margin: 1rem
 }
