--- a/client/css/main.css
+++ b/client/css/main.css
@@ -105,7 +105,7 @@ td {
 
 .right-container{
   padding: 1rem;
-  border-left: solid thin lightgrey;
+
 
 }
 #download-container{
@@ -119,8 +119,9 @@ td {
   border:solid thin #d2d2d2;
   border-radius:5px;
   color: #fff;
-  width: 180px;
-  padding:.5rem;
+  width: 300px;
+  padding:.5rem 1.5rem;
+
 }
 
 #download-button:hover {
